# test_project

./: .env.example  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  seed.py
.github/workflows/: docker.yml
migrations/: env.py
migrations/versions/: 2025.10.20_20fd910473b7_add_user_client_ticket_models.py  2025.10.20_a1b2c3d4e5f6_update_enum_values.py  2025.10.20_f487b66bcfc3_simplified_client_model.py
src/: celery_app.py  main.py  security.py
src/core/: enums.py  models.py
src/core/auth/: routers.py  schemas.py  services.py
src/core/client/: routers.py  schemas.py  services.py
src/core/crm/: routers.py  schemas.py  services.py
